         -- EAAGLES_CONFIG_MAX_PLAYERS_OF_INTEREST for imulation::Gimbal::MAX_PLAYERS 
         -- EAAGLES_CONFIG_RF_MAX_EMISSIONS for imulation::RfSystem::MAX_EMISSIONS
         -- EAAGLES_CONFIG_MAX_TRACKS for imulation::TrackManager::MAX_TRKS
         -- EAAGLES_CONFIG_MAX_REPORTS for imulation::Radar::MAX_REPORTS and imulation::TrackManager::MAX_REPORTS
         -- EAAGLES_CONFIG_MAX_NETIO_ENTITIES for Simulation::NetIO::MAX_OBJECTS
         -- EAAGLES_CONFIG_MAX_NETIO_ENTITY_TYPES for Simulation::NetIO::MAX_ENTITY_TYPES
         -- EAAGLES_CONFIG_MAX_NETIO_NEW_OUTGOING for Simulation::NetIO::MAX_NEW_OUTGOING

--------------------------------------------------------------------------------
basic

   Statistic class
      1) Removed empty file in src/basic named Statistic.h - not needed

   Timer class
      1) addToTimerList() -- prints an error message if unable to added
      the new timer to the list.

--------------------------------------------------------------------------------
basicGL


--------------------------------------------------------------------------------
dis

--------------------------------------------------------------------------------
otw

   OtwCigiCl class
      1) Removed unused variables to eliminate warnings

--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   General
      1) Updated AirVehicle, GroundVehicle, LifeForms and Player so that networked
         players "reset" properly. 

   Player class
      1) Added "initVelocityKts" so that initial velocity can be specified
         in knots

   Steerpoint class
      1) Updated serialize() method so that more steerpoint information is
         save when serialized

--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------



